--- a/src/main/resources/templates/reply/analysis.html
+++ b/src/main/resources/templates/reply/analysis.html
@@ -1,44 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <!-- The above 2 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <link rel="icon" th:href="@{/favicon.ico}" href="../../static/favicon.ico"/>
-
+<head th:replace="fragments :: head ('Analysis')">
     <title>Analysis</title>
-
-    <!-- Bootstrap core CSS -->
-    <link type="text/css" th:href="@{/css/bootstrap-3.3.7.min.css}" href="../../static/css/bootstrap-3.3.7.min.css" rel="stylesheet"/>
-
-    <!-- Custom styles for this template -->
-    <link type="text/css" th:href="@{/css/app.css}" href="../../static/css/app.css" rel="stylesheet"/>
+    <link type="text/css" href="../../static/css/bootstrap-3.3.7.min.css" rel="stylesheet"/>
+    <link type="text/css" href="../../static/css/app.css" rel="stylesheet"/>
 </head>
 <body class="page">
 <!-- Navigation bar
     ================================================== -->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" th:href="@{/}" href="../index.html">Questionnaire</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a th:href="@{/}" href="../index.html">Home</a></li>
-                <li><a th:href="@{/create}" href="../questionnaire/create.html">Create</a></li>
-                <li><a href="#mine">Mine</a></li>
-                <li><a th:href="@{/about}" href="../about.html">About</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
+<nav th:replace="fragments :: nav ('')"></nav>
 
 <!-- Container
     ================================================== -->
@@ -48,8 +18,6 @@
     </div>
 </div><!-- /.container -->
 
-<!-- Place JavaScript at the end of the document so the pages load faster -->
-<script th:src="@{/js/jquery-1.12.4.min.js}" src="../../static/js/jquery-1.12.4.min.js"></script>
-<script th:src="@{/js/bootstrap-3.3.7.min.js}" src="../../static/js/bootstrap-3.3.7.min.js"></script>
+<!--/*/ <th:block th:include="fragments :: assets"></th:block> /*/-->
 </body>
 </html>
