Change some text

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -24,7 +24,7 @@
         </p>
         <p class="lead">
             This is open sourced under the <a href="https://mit-license.org/" target="_blank">MIT License</a>.
-            Please checkout from <a href="#" target="_blank">GitHub</a>.
+            Please checkout from <a href="https://github.com/MignDul/se-questionnaire-web" target="_blank">GitHub</a>.
         </p>
     </div>
 </div><!-- /.container -->
