--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,19 +22,19 @@
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <div class="carousel-caption">
-                <h1>A Simple and Easy to Use Questionnaire System</h1>
+                <h1>A Simple but Powerful Questionnaire System</h1>
                 <p>Make a survey, collect opinions, etc.</p>
             </div>
         </div>
         <div class="item">
             <div class="carousel-caption">
-                <h1>Online Results Analysis</h1>
-                <p>Real-time statistical analysis, display with charts.</p>
+                <h1>Online Analysing Replies</h1>
+                <p>Real-time statistical analysis with charts.</p>
             </div>
         </div>
         <div class="item">
             <div class="carousel-caption">
-                <h1>Responsive UI for Every Device</h1>
+                <h1>Responsive UI for Any Device</h1>
                 <p>PC, mobile phone, tablet.</p>
             </div>
         </div>
