--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -24,7 +24,7 @@
 /* index.html
 -------------------------------------------------- */
 
-.table>tbody>tr>td.col-index, .table>tbody>tr>td.col-title, .table>tbody>tr>td.col-date {
+.table>tbody>tr>td.col-index, .table>tbody>tr>td.col-common, .table>tbody>tr>td.col-date {
     padding-top: 14px;
 }
 
@@ -32,7 +32,7 @@
     width: 140px;
 }
 
-.table>tbody>tr>td.col-actions {
+.table-questionnaires>tbody>tr>td.col-actions {
     width: 142px;
 }
 
@@ -140,6 +140,17 @@ fieldset[disabled] p.form-control {
     cursor: auto;
 }
 
+/* reply/list.html
+-------------------------------------------------- */
+
+.table-replies>tbody>tr>td.col-date {
+    width: auto;
+}
+
+.table-replies>tbody>tr>td.col-actions {
+    width: 100px;
+}
+
 /* Responsive CSS
 -------------------------------------------------- */
 
@@ -176,13 +187,13 @@ fieldset[disabled] p.form-control {
         width: 90px;
         text-align: right;
     }
-    .table>tbody>tr>td.col-actions {
+    .table-questionnaires>tbody>tr>td.col-actions {
         width: 82px;
     }
-    .col-actions a {
+    .table-questionnaires .col-actions a {
         margin-top: 4px;
     }
-    .col-actions a:first-child {
+    .table-questionnaires .col-actions a:first-child {
         margin-top: 0;
     }
 }
