--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
     <h1>All Questionnaires</h1>
     <hr/>
     <div>
-        <table class="table table-striped">
+        <table class="table table-striped table-questionnaires">
             <thead>
             <tr>
                 <th class="col-index">#</th>
@@ -59,7 +59,7 @@
             <tbody th:remove="all-but-first">
             <tr th:each="questionnaire,iter : ${questionnaires}">
                 <td class="col-index" scope="row" th:text="${iter.index + 1}">1</td>
-                <td class="col-title" th:text="${questionnaire.title}">A Text Questionnaire</td>
+                <td class="col-common" th:text="${questionnaire.title}">A Text Questionnaire</td>
                 <td class="col-date" th:text="${#dates.format(questionnaire.createdAt, 'yyyy-MM-dd HH:mm')}">
                     2017-05-01 08:00</td>
                 <td class="col-actions">
@@ -70,8 +70,8 @@
                 </td>
             </tr>
             <tr>
-                <td class="col-index" scope="row">1</td>
-                <td class="col-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                <td class="col-index" scope="row">2</td>
+                <td class="col-common">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                     minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
