--- a/src/main/resources/templates/reply/list.html
+++ b/src/main/resources/templates/reply/list.html
@@ -25,15 +25,15 @@
         <table class="table table-striped table-replies">
             <thead>
             <tr>
-                <th class="col-index">#</th>
-                <th class="col-common">Date&nbsp;<span class="caret"></span></th>
+                <th class="col">#</th>
+                <th class="col">Date&nbsp;<span class="caret"></span></th>
                 <th class="col-actions"></th>
             </tr>
             </thead>
             <tbody th:remove="all-but-first">
             <tr th:each="reply,iter : ${replies}">
-                <td class="col-index" scope="row" th:text="${iter.index + 1}">1</td>
-                <td class="col-common" th:text="${#dates.format(reply.createdAt, 'yyyy-MM-dd HH:mm')}">
+                <td class="col" scope="row" th:text="${iter.index + 1}">1</td>
+                <td class="col" th:text="${#dates.format(reply.createdAt, 'yyyy-MM-dd HH:mm')}">
                     2017-05-01 08:00</td>
                 <td class="col-actions">
                     <a th:href="@{'/replies/' + ${reply.id}}" href="view.html"
@@ -41,8 +41,8 @@
                 </td>
             </tr>
             <tr>
-                <td class="col-index" scope="row">2</td>
-                <td class="col-common">2017-05-01 07:00</td>
+                <td class="col" scope="row">2</td>
+                <td class="col">2017-05-01 07:00</td>
                 <td class="col-actions">
                     <a href="view.html" class="btn btn-primary btn-sm" role="button">View Detail</a>
                 </td>
