--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -2,6 +2,29 @@
     padding-top: 50px;
 }
 
+.nav-logout {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    text-decoration: none!important;
+    line-height: 20px;
+}
+
+.nav-user-info {
+    padding-top: 9px;
+    padding-bottom: 9px;
+    color: #fff;
+}
+
+.nav-username {
+    color: #ffffff;
+}
+
+.nav-divider {
+    color: #9d9d9d;
+    margin-left: 10px;
+}
+
 .page-actions {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -151,10 +174,57 @@ fieldset[disabled] p.form-control {
     width: 100px;
 }
 
+/* user/login.html
+-------------------------------------------------- */
+
+.form-login {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.form-login .form-login-heading, .form-login .checkbox {
+    margin-bottom: 10px;
+}
+
+.form-login .checkbox {
+    font-weight: normal;
+}
+
+.form-login .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.form-login .form-control:focus {
+    z-index: 2;
+}
+
+.form-login input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-login input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
 /* Responsive CSS
 -------------------------------------------------- */
 
 @media (min-width: 768px) {
+    .nav-logout {
+        padding-top: 14px;
+        padding-bottom: 14px;
+    }
     /* Bump up size of carousel content */
     .carousel-caption p {
         margin-bottom: 20px;
@@ -167,6 +237,9 @@ fieldset[disabled] p.form-control {
 }
 
 @media (max-width: 768px) {
+    .nav-divider {
+        display: none;
+    }
     .questionnaire-wrapper {
         width: auto;
         min-width: inherit;
