--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,7 +27,6 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" th:href="@{/}" href="index.html">Questionnaire</a>
-
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -36,15 +35,18 @@
                 <li th:class="${page == 'mine'}? 'active'"><a href="#mine">Mine</a></li>
                 <li th:class="${page == 'about'}? 'active'"><a th:href="@{/about}" href="about.html">About</a></li>
             </ul>
-            <!--/*/ <th:block sec:authorize="isAuthenticated()"> /*/-->
+            <!--/*/ <th:block th:if="${page != 'login' and page != 'register'}"> /*/-->
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <li sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" action="#" method="post">
                         <button type="submit" class="nav-logout btn btn-link">Logout</button>
                     </form>
                 </li>
+                <li sec:authorize="isAnonymous()">
+                    <a th:href="@{/register}" href="user/register.html">Register</a>
+                </li>
             </ul>
-            <div class="nav-user-info navbar-right">
+            <div class="nav-user-info navbar-right" sec:authorize="isAuthenticated()">
                 <img class="nav-avatar" th:src="@{/images/avatar.png}" src="../static/images/avatar.png"/>
                 <span class="nav-username" sec:authentication="name">username</span>
                 <span class="nav-divider">|</span>
