--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -23,6 +23,10 @@
         <input type="password" class="form-control form-user-middle" th:field="*{password}" placeholder="Password"/>
         <input type="password" class="form-control" th:field="*{passwordConfirm}" placeholder="Confirm Password"/>
         <button type="submit" class="btn btn-lg btn-success btn-block">Register</button>
+
+        <div class="page-actions">
+            <p class="pull-right">Already have an account? <a th:href="@{/login}" href="user.html">Login</a></p>
+        </div>
     </form>
 </div>
 
